# devex-cli

./: CONTRIBUTING.md  README.md  pyproject.toml
src/devex/: main.py
src/devex/commands/: branch.py  check.py
tests/: test_check.py
