[project]
name = "devex-cli"
version = "0.1.0"
description = "Developer Experience CLI — Golden Path tooling"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "gitpython>=3.1",
    "pytest>=9.0.3",
]

[project.scripts]
devex = "devex.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devex"]
